--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ MarkupSafe==1.1.1
 numpy==1.18.3
 pipreqs==0.4.10
 requests==2.23.0
-torch==1.5.0
+torch==https://download.pytorch.org/whl/cpu/torch-1.3.1%2Bcpu-cp37-cp37m-linux_x86_64.whl
 urllib3==1.25.9
 Werkzeug==1.0.1
 yarg==0.1.9
