--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ MarkupSafe==1.1.1
 numpy==1.18.3
 pipreqs==0.4.10
 requests==2.23.0
-torch==torch-1.4.0-cp36-none-macosx_10_9_x86_64.whl
+torch-1.4.0-cp36-none-macosx_10_9_x86_64.whl
 urllib3==1.25.9
 Werkzeug==1.0.1
 yarg==0.1.9
